<resources>
    <string name="app_name">KMPAndroidCMPKtor</string>
</resources>